@@ -35,10 +35,25 @@ Object is a Node Set :
 Set contains 6 nodes:
 1  ELEMENT head
 2  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter1
 3  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter2
 4  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter3
 5  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter4
 6  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter5
 
 ========================
 Expression: /child::EXAMPLE/child::head/child::title
@@ -75,7 +90,22 @@ Expression: /descendant::p/ancestor::chapter
 Object is a Node Set :
 Set contains 5 nodes:
 1  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter1
 2  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter2
 3  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter3
 4  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter4
 5  ELEMENT chapter
+    ATTRIBUTE id
+      TEXT
+        content=chapter5
