@@ -1,0 +1,14 @@
+
+========================
+Expression: /1/2/3
+Object is a Node Set :
+Set contains 1 nodes:
+1  ELEMENT image
+    ATTRIBUTE href
+      TEXT
+        content=linus.gif
+
+========================
+Expression: chapter1/3
+Object is a Node Set :
+Set contains 0 nodes:
